fixed three col layout not showing correctly for resume

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -110,22 +110,6 @@ body {
 	position: relative; /* to align the halftone wave in the background */
 }
 
-.app .resume {
-	column-count: 3;
-	column-gap: 40px;
-}
-
-@media (max-width: 1200px) { /* tablet */
-	.app .resume {
-		column-count: 2;
-	}
-}
-@media (max-width: 800px) { /* tablet */
-	.app .resume {
-		column-count: 1;
-	}
-}
-
 footer {
 	column-span: all;
 	margin-top: 2rem;
